# trexio

./: .gitignore  examples.html  flake.nix  index.html  intro.html  lib.html  result  templator_front.html  templator_hdf5.html  templator_text.html  trex.html
haskell/: CHANGELOG.md  result-1  result-dev  trexio.cabal
haskell/data/: specification.json
haskell/src/: TREXIO.chs  TREXIO.hs
haskell/src/TREXIO/: CooArray.hs
haskell/src/TREXIO/Internal/: Base.hsc  Bindings.chs  Marshaller.hs  TH.hs
haskell/test/: Main.hs
nix/: overlay.nix  trexio.nix
