cabal-version:      2.2
name:               trexio
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0
synopsis: Bindings to the TREXIO library for wave function data
-- A longer description of the package.
-- description:
homepage:           https://github.com/TREX-CoE/trexio
license:            BSD-3-Clause
author:             Phillip Seeber
maintainer:         phillip.seeber@uni-jena.de
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common deps
    build-depends:
        base >= 4.18.2.1 && < 4.21,
        bitvec >= 1.1.5.0 && < 1.2,
        filepath >= 1.5.3.0 && < 1.6,
        massiv >= 1.0.0.0 && < 1.1,
        text >= 2.0 && < 2.2

common extensions
    default-extensions:
        OverloadedStrings,
        OverloadedRecordDot,
        RecordWildCards,
        OverloadedRecordUpdate,
        DuplicateRecordFields

library
    import:
        deps,
        extensions,
        warnings
    exposed-modules:
        TREXIO
    -- other-modules:
    hs-source-dirs:   src
    default-language: GHC2021
    build-tool-depends:
        c2hs:c2hs
    extra-libraries:
        trexio

test-suite trexio-test
    import:
        deps,
        extensions,
        warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        trexio
